Fix show up same presenter with more than 1 result whit same range